# sc_curve_approximation

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md
doc/: ApproximationViewer_8cpp.html  ApproximationViewer_8cpp__incl.dot  ApproximationViewer_8cpp__incl.md5  ApproximationViewer_8h.html  ApproximationViewer_8h__dep__incl.dot  ApproximationViewer_8h__dep__incl.md5  ApproximationViewer_8h__incl.dot  ApproximationViewer_8h__incl.md5  ApproximationViewer_8h_source.html  InterpolationViewer_8cpp.html  InterpolationViewer_8cpp__incl.dot  InterpolationViewer_8cpp__incl.md5  InterpolationViewer_8h.html  InterpolationViewer_8h__dep__incl.dot  InterpolationViewer_8h__dep__incl.md5  InterpolationViewer_8h__incl.dot  InterpolationViewer_8h__incl.md5  InterpolationViewer_8h_source.html  README_8md.html  annotated.html  approximation_8cpp.html  approximation_8cpp__incl.dot  approximation_8cpp__incl.md5  cholesky_8cpp.html  cholesky_8cpp__incl.dot  cholesky_8cpp__incl.md5  cholesky_8h.html  cholesky_8h__dep__incl.dot  cholesky_8h__dep__incl.md5  cholesky_8h__incl.dot  cholesky_8h__incl.md5  cholesky_8h_source.html  classApproximationViewer-members.html  classApproximationViewer.html  classApproximationViewer__coll__graph.dot  classApproximationViewer__coll__graph.md5  classApproximationViewer__inherit__graph.dot  classApproximationViewer__inherit__graph.md5  classCholeskySolver-members.html  classCholeskySolver.html  (+47 more)
doc/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  (+6 more)
src/: ApproximationViewer.cpp  ApproximationViewer.h  CMakeLists.txt  InterpolationViewer.cpp  InterpolationViewer.h  approximation.cpp  cholesky.cpp  cholesky.h  lu.cpp  lu.h  types.h
